manifests/jenkins/jenkins-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "jenkins"
  name: "jenkins-ingress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "jenkins.dlwhitehurst.com"
    secretName: "jenkins-prod-tls"
  rules:
  - host: "jenkins.dlwhitehurst.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "jenkins"
            port:
              number: 8080 
---
